# TBProject

./: Otsu_thresholding.ipynb  README.md  TB_visualization.py  Thresholding_clean.ipynb  active_learning.py  better_otsu.ipynb  blurry_deselection.py  boxes.py  buuu.py  ciao  cleaned_otsu_thresholding.ipynb  cleaning_and_cc.py  cnn_bacilli.py  cropped_images_real.npy  cropping.py  cropping_entire_smear.py  data_augmentation.py  deblurrying.ipynb  fff.py  get_5050bacilli.py  get_labels.py  inference_visualization.py  interactive_config.py  interactivelabeling.py  interactivelabelling.py  load_visualize.ipynb  loader.py  map_bacillipertile_3d.py  masking.ipynb  mixed_functions.py  neural_net.py  parraleltrials.py  postprocessing.py  preprocess.py  project.py  project_parallelized.py  requirements.txt  setup.cfg  severity_to_smear.json  severness_prediction.py  (+16 more)
TB_sample/: meta_extern_Synlab_2151_26_3_MTB.czi.npy
active_learning/: coreset_functions.py
configs/: thresholding.yaml  train.yaml  train_autoencoder.yaml
labelled_data/: stats_tile_671_smear_2156_17_3.pkl  stats_tile_673_smear_2156_17_3.pkl  tile_500_smear_2156_17_3.pkl  tile_673_smear_2156_17_3.pkl  tile_777_smear_2156_17_3.pkl  tile_991_smear_2156_17_3.pkl
model/: autoencoder.py  neural_net.py
n_networks/: data_augmentation.py  label_propagation.py  neural_net.py  stats_svm.py  train_vae.py  vae.py  vautoencoder.py
smears_json/: extern_Synlab_2151_26_3_MTB.czi.json
src/: cropping.py  inference_visualization.py  interactive_config.py  interactivelabelling.py  loader.py  postprocessing.py  preprocess.py  (+5 more)
(+49 files in other folders)
