[metadata]
name = tbdetect
version = 0.0.1
authors = 
    {name="Marina Dominguez", email="marina.dominguez@tum.de"}
    {name="Ida Büschel", email="ida.bueschel@tum.de"}
    {name="Lorenzo Capobianco", email="ge32deg@mytum.de"}
    {name="Matteo Cadoni", email="matteo.cadoni.4.97@gmail.com"}
description = Package for detecting Tuberculosis bacilli in stained sputum smear images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marinadominguez/TBProject
project_urls =
    Bug Tracker = https://github.com/marinadominguez/TBProject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    opencv-python
    aicsimageio
    aicspylibczi >= 3.0.5
    fsspec >= 2022.7.1
    argparse
    ruamel.yaml
    pandas
    torch>=1.13.1
    scikit-learn
    h5py

[options.extras_require]
napari =
    napari

[options.packages.find]
where = src